[gd_scene load_steps=4 format=2]

[ext_resource path="res://assets/graphics/game/hud/pixel/combo_nums/combo_nums.tres" type="SpriteFrames" id=1]
[ext_resource path="res://assets/graphics/game/hud/pixel/ratings.tres" type="SpriteFrames" id=2]
[ext_resource path="res://scripts/game/PopupCombo.gd" type="Script" id=3]

[node name="PopupCombo" type="Node2D"]
position = Vector2( 64, -50 )
script = ExtResource( 3 )

[node name="Rating" type="AnimatedSprite" parent="."]
scale = Vector2( 4.2, 4.2 )
frames = ExtResource( 2 )

[node name="ComboNum_Hundreds" type="AnimatedSprite" parent="."]
position = Vector2( -191.05, 100 )
scale = Vector2( 6, 6 )
frames = ExtResource( 1 )

[node name="ComboNum_Tens" type="AnimatedSprite" parent="."]
position = Vector2( -148.05, 100 )
scale = Vector2( 6, 6 )
frames = ExtResource( 1 )

[node name="ComboNum_Ones" type="AnimatedSprite" parent="."]
position = Vector2( -105.05, 100 )
scale = Vector2( 6, 6 )
frames = ExtResource( 1 )

[node name="Tween" type="Tween" parent="."]
